--- a/GameLibrary/GameLibrary.csproj
+++ b/GameLibrary/GameLibrary.csproj
@@ -124,6 +124,7 @@
     <Compile Include="LevelData.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScoreKeeping.cs" />
     <Compile Include="Star.cs" />
     <EmbeddedResource Include="Properties\GameLibrary.rd.xml" />
   </ItemGroup>
